# PyIndicators

./: .gitignore  PRD.md  README.md  __init__.py  pyproject.toml
.github/ISSUE_TEMPLATE/: failing-pipeline.yml  improve-documentation.yml  improve-tests.yml  new-indicator.yml
.github/workflows/: deploy-docs.yml  test.yml
.squad/: decisions.md  routing.md  team.md  work-items.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-02-27T21-00-00Z-issue-3-tbn-chart.md  2026-02-28T12-00-00Z-issue-3-tbn-chart-improve.md
.squad/orchestration-log/: 2026-02-27T21-00-00Z-carlos-tbn-chart-plan.md  2026-02-27T21-00-00Z-devmeister3000-tbn-notebook.md  2026-02-27T21-00-00Z-doc-vader-tbn-docs.md  2026-02-28T12-00-00Z-devmeister3000-tbn-chart-improve.md  2026-02-28T12-00-00Z-doc-vader-tbn-docs-verify.md
.squad/templates/: improve-chart-issue.yml  new-indicator-issue.md  new-indicator-issue.yml
analysis/indicators/: trendline_breakout_navigator.ipynb
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
docs/content/: installation.md  introduction.md
pyindicators/: __init__.py
pyindicators/indicators/: __init__.py  accumulation_distribution_zones.py  adx.py  average_true_range.py  bollinger_bands.py  breaker_blocks.py  buyside_sellside_liquidity.py  crossover.py  crossunder.py  divergence.py  ema_trend_ribbon.py  equal_highs_lows.py  exponential_moving_average.py  fair_value_gap.py  fibonacci_retracement.py  golden_zone.py  internal_external_liquidity_zones.py  liquidity_levels_voids.py  liquidity_pools.py  liquidity_sweeps.py  macd.py  market_structure.py  opening_gap.py  (+26 more)
scripts/: generate_docs.py
(+271 files in other folders)
