[tool.poetry]
name = "pyindicators"
version = "0.1.0"
description = "PyIndicators is a powerful and user-friendly Python library for technical analysis indicators and metrics. Written entirely in Python, it requires no external dependencies, ensuring seamless integration and ease of use."
authors = ["Marc van Duyn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
polars = "^0.46.0"

[tool.poetry.group.dev.dependencies]
ta-lib = "^0.4.28"
investing-algorithm-framework = "5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
Črtomirova ulica 22, 1000 Ljubljana, Slovenia