[tool.poetry]
name = "pyindicators"
version = "0.1.0"
description = "PyIndicators is a powerful and user-friendly Python library for technical analysis indicators and metrics. Written entirely in Python, it requires no external dependencies, ensuring seamless integration and ease of use."
authors = ["Marc van Duyn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.0"
polars = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
